# ------------------------------------------------------------
#  ssm CMake file 
#  
#    auotmatically install
#  ~/include directory
# ------------------------------------------------------------


# install library
install(FILES ssm.h ssm-time.h ssm.hpp ssmp.hpp ssm-log.hpp DESTINATION include)
