# ------------------------------------------------------------
#  ssm CMake file 
#  
#    auotmatically install
#  ~/include directory
# ------------------------------------------------------------


# install library
install(FILES ssm.h ssm-time.h ssm2hat.hpp ssm2hat_pointer.hpp ssm2hat_log.hpp DESTINATION include)
