# ------------------------------------------------------------
#  ssm CMake file 
#  
#    auotmatically install
#  ~/include directory
# ------------------------------------------------------------


# install library
install(FILES ssm2hat.h ssm2hat_time.h ssm2hat_lib.h ssm2hat.hpp ssm2hat_pointer.hpp ssm2hat_log.hpp DESTINATION include)
